--- a/ejerciciosT8.html
+++ b/ejerciciosT8.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="ejercicio1.js"></script>
-    <script src="ejercicio3.js"></script>
-    <script src="ejercicio4.js"></script>
-    <script src="ejercicio5.js"></script>
-    <script src="ejercicio6.js"></script>
-    <script src="ejercicio7.js"></script>
-    <script src="ejercicio8.js"></script>
-    <script src="ejercicio9.js"></script>
+    <script src="ejercicio1.js" .defer></script>
+    <script src="ejercicio3.js" .defer></script>
+    <script src="ejercicio4.js" .defer></script>
+    <script src="ejercicio5.js" .defer></script>
+    <script src="ejercicio6.js" .defer></script>
+    <script src="ejercicio7.js" .defer></script>
+    <script src="ejercicio8.js" .defer></script>
+    <script src="ejercicio9.js" .defer></script>
+    <script src="ejercicio10.js" .defer></script>
+    <script src="ejercicio11.js" .defer></script>
     <title>Ejercicios</title>
 </head>
 <body>
