--- a/tema8.2.html
+++ b/tema8.2.html
@@ -23,5 +23,14 @@
     <a></a>
     <p>Loremmmmmmmmmmmm, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eum inventore. Reprehenderit laborum nam atque natus odio provident 
         quaerat voluptatibus quasi. Molestiae quasi sapiente temporibus sunt excepturi velit atque sint.</p>
+    <a></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <a></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+    <a>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </a>
 </body>
 </html>
