--- a/tema8.2.html
+++ b/tema8.2.html
@@ -30,7 +30,20 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
     <a>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.</br>
     </a>
+
+    <button type="button" class="btn btn-primary active" id="boton">Active Primary</button>
+
+    <table>
+        <tr>
+            <th>Alumno</td>
+            <th>N clase</th>            
+        </tr>
+        <tr>
+            <td>Paco Porras</td>            
+            <td>1</td>
+        </tr>       
+    </table>
 </body>
 </html>
