--- a/tema8.2.html
+++ b/tema8.2.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ejemploT8.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Tema8.2</title>
 </head>
 <body>
@@ -33,7 +35,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit.</br>
     </a>
 
-    <button type="button" class="btn btn-primary active" id="boton">Active Primary</button>
+   
 
     <table>
         <tr>
@@ -45,5 +47,9 @@
             <td>1</td>
         </tr>       
     </table>
+
+    <button type="button" class="btn btn-primary" id="btncambiar">cambiarTamanio</button>
+    <button type="button" class="btn btn-primary" id="btnocultar">ocultar</button>
+    <img src="capibara.jpg" alt="capibara" width="25%">
 </body>
 </html>
